--- a/ml-service/api/requirements.txt
+++ b/ml-service/api/requirements.txt
@@ -11,6 +11,8 @@ flake8==4.0.1
 idna==3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+numpy==1.24.3
+pandas==2.0.1
 pathspec==0.9.0
 platformdirs==2.5.1
 psycopg2==2.9.3
