--- a/ml-service/api/requirements.txt
+++ b/ml-service/api/requirements.txt
@@ -19,6 +19,7 @@ psycopg2==2.9.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
 requests==2.27.1
+scikit-learn==1.2.2
 sqlparse==0.4.2
 tomli==2.0.1
 urllib3==1.26.9
